<resources>
    <string name="app_name">School Info APP</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="gender">Students Gender</string>
    <string name="session">Session</string>
    <string name="district">District</string>
    <string name="fintype">Finance Type</string>
    <string name="level">School Level</string>
    <string name="tele">Telephone</string>
    <string name="fax">Fax Number</string>
    <string name="website">WebSite</string>
    <string name="religion">Religion</string>
    <string name="sortid">Sort by ID</string>
    <string name="sortdistrict">Sort by District</string>
    <string name="sortname">Sort by Name</string>
    <string name="inputtext">Search by name</string>
    <string name="inputedit">Enter a name</string>
    <string name="mainname">Search by Name</string>
    <string name="maincat">Search by Category</string>
    <string name="resultapply">Apply</string>
    <string name="backsearch">Go back to Search</string>
    <string name="sss">Advance Searching</string>
    <string name="submit">Submit</string>
    <string name="backtoresearch">Go Back To Re-search</string>
    <string name="usefulweb">Useful Website</string>

    <string-array name="categoryspinner">
        <item>ANY</item>
        <item>Aided Primary Schools</item>
        <item>Aided Secondary Schools</item>
        <item>Aided Special Schools</item>
        <item>Caput Secondary Schools</item>
        <item>Direct Subsidy Scheme Primary Schools</item>
        <item>Direct Subsidy Scheme Secondary Schools</item>
        <item>English Schools Foundation (Primary)</item>
        <item>English Schools Foundation (Secondary)</item>
        <item>Government Primary Schools</item>
        <item>Government Secondary Schools</item>
        <item>International Schools (Primary)</item>
        <item>International Schools (Secondary)</item>
        <item>Kindergarten-cum-child Care Centres</item>
        <item>Kindergartens</item>
        <item>Private Primary Schools</item>
        <item>Private Secondary Schools (Day/Evening)</item>
    </string-array>
    <string-array name="genderspinner">
        <item>ANY</item>
        <item>Male</item>
        <item>Female</item>
        <item>CO-ED</item>
    </string-array>
    <string-array name="sessionspinner">
        <item>ANY</item>
        <item>A.M.</item>
        <item>P.M</item>
        <item>EVENING</item>
        <item>WHOLE DAY</item>
    </string-array>
    <string-array name="districtspinner">
        <item>ANY</item>
        <item>KOWLOON CITY</item>
        <item>SHA TIN</item>
        <item>WAN CHAI</item>
        <item>TUEN MUN</item>
        <item>YUEN LONG</item>
        <item>ISLANDS</item>
        <item>KWAI TSING</item>
        <item>NORTH</item>
        <item>CENTRAL AND WESTERN</item>
        <item>TAI PO</item>
        <item>SAI KUNG</item>
        <item>TSUEN WAN</item>
        <item>KWUN TONG</item>
        <item>SHAM SHUI PO</item>
        <item>EASTERN</item>
        <item>WONG TAI SIN</item>
        <item>YAU TSIM MONG</item>
        <item>SOUTHERN</item>
        <item>SHUM SHUI PO</item>
    </string-array>
    <string-array name="fintypespineer">
        <item>ANY</item>
        <item>AIDED</item>
        <item>CAPUT</item>
        <item>DIRECT SUBSIDY SCHEME</item>
        <item>ENGLISH SCHOOLS FOUNDATION</item>
        <item>GOVERNMENT</item>
        <item>PRIVATE</item>
        <item>PRIVATE INDEPENDENT SCH SCHEME</item>
    </string-array>
    <string-array name="levelspinner">
        <item>ANY</item>
        <item>KINDERGARTEN</item>
        <item>KINDERGARTEN-CUM-CHILD CARE CENTRES</item>
        <item>PRIMARY</item>
        <item>SECONDARY</item>
    </string-array>
    <string-array name="religionspinner">
        <item>ANY</item>
        <item>CATHOLICISM</item>
        <item>PROTESTANTISM / CHRISTIANITY</item>
        <item>NOT APPLICABLE</item>
        <item>BUDDHISM</item>
        <item>TAOISM</item>
        <item>ISLAM</item>
        <item>CONFUCIANISM,BUDDHISM AND TAOISM</item>
        <item>CONFUCIANISM</item>
        <item>SIKH</item>
        <item>OTHERS</item>
    </string-array>
</resources>
