<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sss"
        android:textColor="@color/black"/>
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*">
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/category"
            android:textColor="@color/black"/>
    </TableRow>
    <TableRow>
        <Spinner
            android:id="@+id/categoryspinner"
            android:layout_span="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/session"
            android:textColor="@color/black"/>
    </TableRow>
    <TableRow>
        <Spinner
            android:id="@+id/genderspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        />

        <Spinner
            android:id="@+id/sessionspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/district"
            />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/fintype"/>
    </TableRow>
    <TableRow>
        <Spinner
            android:id="@+id/districtspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:id="@+id/fintypespinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/level"
            />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/religion"/>
    </TableRow>
    <TableRow>
        <Spinner
            android:id="@+id/levelspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:id="@+id/religionspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
</TableLayout>
    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sortbyId"
            android:checked="true"
            android:text="@string/sortid"
            android:textColor="@color/black"/>
        <RadioButton
            android:id="@+id/sortbyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/sortname"
            android:textColor="@color/black"/>
    </RadioGroup>
    <Button
        android:id="@+id/submitbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/HKMU_Blue"
        android:text="@string/submit"/>
</LinearLayout>